Added Manual Scripts

--- a/src/app/tests/suites/certification/Test_TC_DGETH_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGETH_2_1.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 48.1.1. [TC-ETHDIAG-1.1] Attributes with server as DUT
+name: 45.2.1. [TC-DGETH-2.1] Attributes with server as DUT
 
 config:
     nodeId: 0x12344321
