--- a/src/app/tests/suites/certification/Test_TC_DM_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_2_2.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 3.2.2. [TC-DM-2.2] Operational Credential Attributes
+name: 10.2.2. [TC-DM-2.2] Basic Information Cluster Events
 
 config:
     nodeId: 0x12344321
