--- a/src/app/tests/suites/certification/Test_TC_DM_4_11.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_11.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.11. [TC-DM-4.11][WiFi] Verification for ConnectNetwork Command
+    10.4.11. [TC-DM-4.11] [WiFi] Verification for ConnectNetwork Command
     [DUT-Commissionee]
 
 config:
@@ -23,87 +23,83 @@ config:
     endpoint: 0
 
 tests:
-    - label: "TH1 sends ArmFailSafe command to the DUT"
+    - label: "TH sends ArmFailSafe command to the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool generalcommissioning arm-fail-safe 60 0 1 0
 
-          [1650376197.742950][42857:42862] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0001
-          [1650376197.743013][42857:42862] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0001
-          [1650376197.743113][42857:42862] CHIP:TOO:   ArmFailSafeResponse: {
-          [1650376197.743172][42857:42862] CHIP:TOO:     errorCode: 0
-          [1650376197.743208][42857:42862] CHIP:TOO:     debugText:
-          [1650376197.743242][42857:42862] CHIP:TOO:    }
-          [1650376197.743296][42857:42862] CHIP:DMG: ICR moving to [AwaitingDe]
-          [1650376197.743367][42857:42862] CHIP:EM: Sending Standalone Ack for MessageCounter:11807454 on exchange 55345i
+          [1653480530.006012][27845:27850] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0001
+          [1653480530.006109][27845:27850] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0001
+          [1653480530.006209][27845:27850] CHIP:TOO:   ArmFailSafeResponse: {
+          [1653480530.006278][27845:27850] CHIP:TOO:     errorCode: 0
+          [1653480530.006328][27845:27850] CHIP:TOO:     debugText:
+          [1653480530.006374][27845:27850] CHIP:TOO:    }
       disabled: true
 
     - label:
           "TH1 sends AddOrUpdateWiFiNetwork command to the DUT with SSID
           argument value as 'Userwifi_ssid', Credentials argument value as
-          'xxxxx' and Breadcrumb argument value as 0"
+          'Userwifi_Credentials' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning add-or-update-wi-fi-network hex:47524C50726976617465 grlprivatewifi092010 1 0
 
-          [1650376203.648598][42863:42868] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0031 Command=0x0000_0005
-          [1650376203.648659][42863:42868] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Command 0x0000_0005
-          [1650376203.648761][42863:42868] CHIP:TOO:   NetworkConfigResponse: {
-          [1650376203.648822][42863:42868] CHIP:TOO:     networkingStatus: 0
-          [1650376203.648860][42863:42868] CHIP:TOO:     networkIndex: 0
-          [1650376203.648894][42863:42868] CHIP:TOO:    }
-          [1650376203.648948][42863:42868] CHIP:DMG: ICR moving to [AwaitingDe]
-          [1650376203.649015][42863:42868] CHIP:EM: Sending Standalone Ack for MessageCounter:1508553 on exchange 44250i
+          Endpoint=0 Cluster=0x0000_0031 Command=0x0000_0005
+          [1653480530.517643][27851:27856] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Command 0x0000_0005
+          [165
+          3480530.517748][27851:27856] CHIP:TOO:   NetworkConfigResponse: {
+          [1653480530.517808][27851:27856] CHIP:TOO:     networkingStatus: 0
+          [1653480530.517854][27851:27856] CHIP:TOO:     networkIndex: 0
+          [1653480530.517894][27851:27856] CHIP:TOO:    }
       disabled: true
 
     - label: "TH1 reads Networks attribute from the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 1 0
 
-          [1650376210.400416][42869:42874] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3182776035
-          [1650376210.400521][42869:42874] CHIP:TOO:   Networks: 1 entries
-          [1650376210.400580][42869:42874] CHIP:TOO:     [1]: {
-          [1650376210.400615][42869:42874] CHIP:TOO:       NetworkID: 47524C50726976617465
-          [1650376210.400646][42869:42874] CHIP:TOO:       Connected: FALSE
-          [1650376210.400677][42869:42874] CHIP:TOO:      }
-          [1650376210.400786][42869:42874] CHIP:EM: Sending Standalone Ack for MessageCounter:3301439 on exchange 38417i
-      disabled: true
-
-    - label: "TH1 saves the timestamp as CT1"
-      verification: |
-
+          [1653480531.027668][27857:27863] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3424382863
+          [1653480531.027835][27857:27863] CHIP:TOO:   Networks: 1 entries
+          [1653480531.027946][27857:27863] CHIP:TOO:     [1]: {
+          [1653480531.028015][27857:27863] CHIP:TOO:       NetworkID: 47524C50726976617465
+          [1653480531.028073][27857:27863] CHIP:TOO:       Connected: TRUE
+          [1653480531.028128][27857:27863] CHIP:TOO:      }
       disabled: true
 
     - label:
-          "TH1 sends ConnectNetwork command to the DUT with NetworkID argument
-          value as 'Userwifi_ssid1' and Breadcrumb argument value as 0"
+          "TH saves record current wall clock time with seconds resolution as
+          CT1"
+      verification: |
+          TH1 saves the timestamp as CT1
+      disabled: true
+
+    - label:
+          "TH sends ConnectNetwork command to the DUT with NetworkID argument
+          value as 'Userwifi_ssid1' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning connect-network hex:47524C50726976617465 1 0
 
-          [1650376217.124606][42876:42881] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0031 Command=0x0000_0007
-          [1650376217.124707][42876:42881] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Command 0x0000_0007
-          [1650376217.124870][42876:42881] CHIP:TOO:   ConnectNetworkResponse: {
-          [1650376217.124968][42876:42881] CHIP:TOO:     networkingStatus: 0
-          [1650376217.125030][42876:42881] CHIP:TOO:     errorValue: null
-          [1650376217.125087][42876:42881] CHIP:TOO:    }
-          [1650376217.125179][42876:42881] CHIP:DMG: ICR moving to [AwaitingDe]
-          [1650376217.125282][42876:42881] CHIP:EM: Sending Standalone Ack for MessageCounter:7901929 on exchange 1050i
+          Endpoint=0 Cluster=0x0000_0031 Command=0x0000_0007
+          [1653480537.209041][27864:27869] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Command 0x0000_0007
+          [1653480537.209113][27864:27869] CHIP:TOO:   ConnectNetworkResponse: {
+          [1653480537.209154][27864:27869] CHIP:TOO:     networkingStatus: 0
+          [1653480537.209179][27864:27869] CHIP:TOO:     errorValue: null
+          [1653480537.209201][27864:27869] CHIP:TOO:    }
+          [1653480537.209240][27864:27869] CHIP:DMG: ICR moving to [AwaitingDe]
       disabled: true
 
-    - label: "TH1 saves the timestamp as CT2"
+    - label:
+          "TH saves record current wall clock time with seconds resolution as
+          CT2"
       verification: |
-
+          TH1 saves the timestamp as CT2
       disabled: true
 
-    - label: "TH1 reads Networks attribute from the DUT"
+    - label: "TH reads Networks attribute from the DUT"
       verification: |
-          https://github.com/project-chip/connectedhomeip/issues/17106
-
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 1 0
 
-          [1650376224.551341][42882:42887] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3182776035
-          [1650376224.551440][42882:42887] CHIP:TOO:   Networks: 1 entries
-          [1650376224.551501][42882:42887] CHIP:TOO:     [1]: {
-          [1650376224.551535][42882:42887] CHIP:TOO:       NetworkID: 47524C50726976617465
-          [1650376224.551565][42882:42887] CHIP:TOO:       Connected: FALSE
-          [1650376224.551596][42882:42887] CHIP:TOO:      }
-          [1650376224.551703][42882:42887] CHIP:EM: Sending Standalone Ack for MessageCounter:16427109 on exchange 14955i
+          [1653481261.622658][27982:27987] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3424382863
+          [1653481261.622821][27982:27987] CHIP:TOO:   Networks: 1 entries
+          [1653481261.622927][27982:27987] CHIP:TOO:     [1]: {
+          [1653481261.622996][27982:27987] CHIP:TOO:       NetworkID: 47524C50726976617465
+          [1653481261.623056][27982:27987] CHIP:TOO:       Connected: TRUE
+          [1653481261.623112][27982:27987] CHIP:TOO:      }
       disabled: true
