--- a/src/app/tests/suites/certification/Test_TC_DM_4_14.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_14.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.14. [TC-DM-4.14][Thread] Verification for ReorderNetwork command
+    10.4.14. [TC-DM-4.14] [Thread] Verification for ReorderNetwork command
     [DUT-Commissionee]
 
 config:
@@ -23,47 +23,23 @@ config:
     endpoint: 0
 
 tests:
-    - label: "TH1 sends ArmFailSafe command to the DUT"
+    - label: "TH sends ArmFailSafe command to the DUT"
       verification: |
-          ubuntu@ubuntu:~/cntl/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool generalcommissioning arm-fail-safe 900 0 62 0
-
-          [1650392597.976230][10152:10157] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0001
-          [1650392597.976363][10152:10157] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0001
-          [1650392597.976539][10152:10157] CHIP:TOO:   ArmFailSafeResponse: {
-          [1650392597.976665][10152:10157] CHIP:TOO:     errorCode: 0
-          [1650392597.976729][10152:10157] CHIP:TOO:     debugText:
-          [1650392597.976785][10152:10157] CHIP:TOO:    }
-          [1650392597.976874][10152:10157] CHIP:DMG: ICR moving to [AwaitingDe]
-          [1650392597.976987][10152:10157] CHIP:EM: Sending Standalone Ack for MessageCounter:10494017 on exchange 14665i
+          The test case is not verifiable. As MaxNetworks value is 1 but expected is 4 
+          ( Pre-Condition)
       disabled: true
 
     - label:
-          "TH1 sends ReorderNetwork Command to the DUT with the following
+          "TH sends ReorderNetwork Command to the DUT with the following
           arguments: NetworkID argument value as 'Userth_op1' NetworkIndex
-          argument value as 'Thnet_idx2' Breadcrumb argument value as 0"
+          argument value as 'Userth_netidx2' Breadcrumb argument value as 1"
       verification: |
-          ubuntu@ubuntu:~/cntl/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning reorder-network 0119100899082022 3 62 0
-
-          [1650392602.379377][10158:10163] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0031 Command=0x0000_0005
-          [1650392602.379490][10158:10163] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Command 0x0000_0005
-          [1650392602.379618][10158:10163] CHIP:TOO:   NetworkConfigResponse: {
-          [1650392602.379725][10158:10163] CHIP:TOO:     networkingStatus: 3
-          [1650392602.379792][10158:10163] CHIP:TOO:    }
-          [1650392602.379882][10158:10163] CHIP:DMG: ICR moving to [AwaitingDe]
+          The test case is not verifiable. As MaxNetworks value is 1 but expected is 4 
+          ( Pre-Condition)
       disabled: true
 
-    - label: "TH1 reads Networks attribute list from the DUT"
+    - label: "TH reads Networks attribute list from the DUT"
       verification: |
-          ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 162 0
-
-          [1645772651.445097][3856:3861] CHIP:DMG:         SuppressResponse = true,
-          [1645772651.445149][3856:3861] CHIP:DMG:         InteractionModelRevision = 1
-          [1645772651.445209][3856:3861] CHIP:DMG: }
-          [1645772651.445754][3856:3861] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001DataVersion: 92121563
-          [1645772651.445875][3856:3861] CHIP:TOO:   Networks: 1 entries
-          [1645772651.446057][3856:3861] CHIP:TOO:     [1]: {
-          [1645772651.446120][3856:3861] CHIP:TOO:       NetworkID: 0119100899082022
-          [1650389742.394958][9809:9814] CHIP:TOO:       Connected: TRUE
-          [1645772651.446228][3856:3861] CHIP:TOO:      }
-          [1645772651.446431][3856:3861] CHIP:EM: Sending Standalone Ack for MessageCounter:12695576 on exchange 11133i
+          The test case is not verifiable. As MaxNetworks value is 1 but expected is 4 
+          ( Pre-Condition)
       disabled: true
