--- a/src/app/tests/suites/certification/Test_TC_DM_4_19.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_19.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.19. [TC-DM-4.19][Ethernet] Verification for attributes check
+    10.4.19. [TC-DM-4.19] [Ethernet] Verification for attributes check
     [DUT-Commissioner]
 
 config:
@@ -25,7 +25,7 @@ config:
 tests:
     - label: "DUT reads the MaxNetworks attribute from the TH"
       verification: |
-          ubuntu@ubuntu:~/apps$ sudo ./chip-tool networkcommissioning read max-networks 1 0
+          ubuntu@ubuntu:~/apps$ ./chip-tool networkcommissioning read max-networks 1 0
 
           [1646226441.815782][2475:2480] CHIP:DMG:        SuppressResponse = true,
           [1646226441.815849][2475:2480] CHIP:DMG:        InteractionModelRevision = 1
@@ -37,18 +37,20 @@ tests:
 
     - label: "DUT reads the Networks attribute from the TH"
       verification: |
-          Expected 1 entire
-
           ubuntu@ubuntu:~/sethu-apr1/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 1 0
 
-          [1649310351.178908][2677:2682] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3138976789
-          [1649310351.178985][2677:2682] CHIP:TOO:   Networks: 0 entries
-          [1649310351.179103][2677:2682] CHIP:EM: Sending Standalone Ack for MessageCounter:8390931 on exchange 1768i
+          [1653483289.382372][28210:28215] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001 DataVersion: 3189790698
+          [1653483289.382458][28210:28215] CHIP:TOO:   Networks: 1 entries
+          [1653483289.382507][28210:28215] CHIP:TOO:     [1]: {
+          [1653483289.382537][28210:28215] CHIP:TOO:       NetworkID: 65746830
+          [1653483289.382561][28210:28215] CHIP:TOO:       Connected: TRUE
+          [1653483289.382584][28210:28215] CHIP:TOO:      }
+          [1653483289.382684][28210:28215] CHIP:EM: Sending Standalone Ack for MessageCounter:13711908 on exchange 32535i
       disabled: true
 
     - label: "DUT reads InterfaceEnabled attribute from the TH"
       verification: |
-          ubuntu@ubuntu:~/apps$ sudo ./chip-tool networkcommissioning read interface-enabled 1 0
+          ubuntu@ubuntu:~/apps$ ./chip-tool networkcommissioning read interface-enabled 1 0
 
           [1646226615.428003][2502:2507] CHIP:DMG:
           [1646226615.428035][2502:2507] CHIP:DMG:        SuppressResponse = true,
@@ -59,9 +61,9 @@ tests:
           [1646226615.428415][2502:2507] CHIP:EM: Sending Standalone Ack for MessageCounter:3894401 on exchange 55691i
       disabled: true
 
-    - label: "DUT reads LastNetowrkingStatus attribute from the TH"
+    - label: "DUT reads LastNetworkingStatus attribute from the TH"
       verification: |
-          ubuntu@ubuntu:~/apps$ sudo ./chip-tool networkcommissioning read last-networking-status 1 0
+          ubuntu@ubuntu:~/apps$ ./chip-tool networkcommissioning read last-networking-status 1 0
 
           [1646227167.614060][2533:2538] CHIP:DMG:        SuppressResponse = true,
           [1646227167.614095][2533:2538] CHIP:DMG:        InteractionModelRevision = 1
@@ -73,7 +75,7 @@ tests:
 
     - label: "DUT reads LastNetworkID attribute from the TH"
       verification: |
-          ubuntu@ubuntu:~/apps$ sudo ./chip-tool networkcommissioning read last-network-id 1 0
+          ubuntu@ubuntu:~/apps$ ./chip-tool networkcommissioning read last-network-id 1 0
 
           [1646227218.543427][2545:2550] CHIP:DMG:
           [1646227218.543462][2545:2550] CHIP:DMG:        SuppressResponse = true,
@@ -86,13 +88,9 @@ tests:
 
     - label: "DUT reads LastConnectErrorValue attribute from the TH"
       verification: |
-          ubuntu@ubuntu:~/apps$ sudo ./chip-tool networkcommissioning read last-connect-error-value 1 0
+          ubuntu@ubuntu:~/apps$ ./chip-tool networkcommissioning read last-connect-error-value 1 0
 
-          [1646227266.753206][2560:2565] CHIP:DMG:
-          [1646227266.753239][2560:2565] CHIP:DMG:        SuppressResponse = true,
-          [1646227266.753272][2560:2565] CHIP:DMG:        InteractionModelRevision = 1
-          [1646227266.753303][2560:2565] CHIP:DMG: }
-          [1646227266.753472][2560:2565] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0007DataVersion: 3622667250
-          [1646227266.753556][2560:2565] CHIP:TOO:   LastConnectErrorValue: 0
-          [1646227266.753632][2560:2565] CHIP:EM: Sending Standalone Ack for MessageCounter:7911198 on exchange 43970i
+          [1653483224.839873][28189:28194] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0007 DataVersion: 3189790698
+          [1653483224.839927][28189:28194] CHIP:TOO:   LastConnectErrorValue: null
+          [1653483224.840028][28189:28194] CHIP:EM: Sending Standalone Ack for MessageCounter:289132 on exchange 60682i
       disabled: true
