--- a/src/app/tests/suites/certification/Test_TC_DGETH_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGETH_2_2.yaml
@@ -12,12 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name:
-    54.2.3. [TC-WIFIDIAG-3.1] Command received functionality with server as DUT
+name: 45.2.2. [TC-DGETH-2.2] Command received functionality with server as DUT
 
 config:
     nodeId: 0x12344321
-    cluster: "WiFi Network Diagnostics"
+    cluster: "Ethernet Network Diagnostics"
     endpoint: 0
 
 tests:
@@ -29,51 +28,42 @@ tests:
               - name: "nodeId"
                 value: nodeId
 
-    #issue #13645
-    # Also, ResetCounts may not work on some platforms yet?
-    # And on Linux since we don't have actual Wi-Fi these error out.
-    - label: "TH sends ResetCounts command to DUT"
+    #issue #13648
+    - label: "Sends ResetCounts command"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "ResetCounts"
 
-    - label: "Reads BeaconLostCount attribute from DUT"
+    - label: "Read the PacketRxCount attribute"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
-      attribute: "BeaconLostCount"
+      attribute: "PacketRxCount"
       response:
           value: 0
 
-    - label: "Reads BeaconRxCount attribute from DUT"
+    - label: "Read the PacketTxCount attribute"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
-      attribute: "BeaconRxCount"
+      attribute: "PacketTxCount"
       response:
           value: 0
 
-    - label: "Reads PacketMulticastRxCount attribute from DUT"
+    - label: "Read the TxErrCount attribute"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
-      attribute: "PacketMulticastRxCount"
+      attribute: "TxErrCount"
       response:
           value: 0
 
-    - label: "Reads PacketMulticastTxCount attribute from DUT"
+    - label: "Read the CollisionCount attribute"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
-      attribute: "PacketMulticastTxCount"
+      attribute: "CollisionCount"
       response:
           value: 0
 
-    - label: "Reads PacketUnicastRxCount attribute from DUT"
+    - label: "Read the OverrunCount attribute"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
-      attribute: "PacketUnicastRxCount"
-      response:
-          value: 0
-
-    - label: "Reads PacketUnicastTxCount attribute from DUT"
-      PICS: PICS_SKIP_SAMPLE_APP
-      command: "readAttribute"
-      attribute: "PacketUnicastTxCount"
+      attribute: "OverrunCount"
       response:
           value: 0
