--- a/src/app/tests/suites/certification/Test_TC_DM_2_4.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_2_4.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 10.2.4. [TC-DM-2.4] Operational Credential Attributes [DUT - Commissioner]
+name: 3.1.4. [TC-DM-2.4] Basic Information Cluster Events [DUT - Controller]
 
 config:
     nodeId: 0x12344321
@@ -21,27 +21,101 @@ config:
     endpoint: 0
 
 tests:
-    - label: "Commission TH to DUT"
+    - label: "Simulate a reboot on the TH"
       verification: |
+          ./chip-tool basic read-event start-up 1 0
 
+
+          [1651229405.704017][2825:2825] CHIP:EM: Received message of type 0x2 with protocolId (0, 1) and MessageCounter:11744980 on exchange 35983r
+          [1651229405.704064][2825:2825] CHIP:EM: Handling via exchange: 35983r, Delegate: 0xaaaae659a088
+          [1651229405.704208][2825:2825] CHIP:IM: Received Read request
+          [1651229405.704271][2825:2825] CHIP:DMG: ReadRequestMessage =
+          [1651229405.704303][2825:2825] CHIP:DMG: {
+          [1651229405.704329][2825:2825] CHIP:DMG:        EventPathIBs =
+          [1651229405.704362][2825:2825] CHIP:DMG:        [
+          [1651229405.704392][2825:2825] CHIP:DMG:                EventPath =
+          [1651229405.704428][2825:2825] CHIP:DMG:                {
+          [1651229405.704463][2825:2825] CHIP:DMG:                        Endpoint = 0x0,
+          [1651229405.704501][2825:2825] CHIP:DMG:                        Cluster = 0x28,
+          [1651229405.704539][2825:2825] CHIP:DMG:                        Event = 0x0,
+          [1651229405.704575][2825:2825] CHIP:DMG:                },
+          [1651229405.704613][2825:2825] CHIP:DMG:
+          [1651229405.704641][2825:2825] CHIP:DMG:        ],
+          [1651229405.704676][2825:2825] CHIP:DMG:
+          [1651229405.704707][2825:2825] CHIP:DMG:        isFabricFiltered = true,
+          [1651229405.704737][2825:2825] CHIP:DMG:        InteractionModelRevision = 1
+          [1651229405.704766][2825:2825] CHIP:DMG: },
       disabled: true
 
-    - label: "DUT reads the NOCs attribute from TH"
+    - label: "Simulate a Shut down on the TH"
       verification: |
-          ./chip-tool operationalcredentials read nocs 1 0
+          1. Launch chip-tool into interactive mode with the command ./chip-tool interactive start
+
+          2. Turn down the DUT and run below command in interactive mode shell
+          basic subscribe-event shut-down 1 3 1 0
+
+          CHIP:ZCL: Emitting ShutDown event
+          [1653392378.033015][19010:19010] CHIP:EVL: LogEvent event number: 0x0000000000000005 priority: 2, endpoint id:  0x0 cluster id: 0x0000_0028 event id: 0x1 Sys timestamp: 0x0000000006AD1297
       disabled: true
 
-    - label: "DUT reads the Fabrics attribute from TH"
+    - label: "Simulate a reboot on the TH"
       verification: |
-          ./chip-tool operationalcredentials read fabrics 1 0
+          ./chip-tool basic read-event start-up 1 0
+
+
+          [1651229405.704017][2825:2825] CHIP:EM: Received message of type 0x2 with protocolId (0, 1) and MessageCounter:11744980 on exchange 35983r
+          [1651229405.704064][2825:2825] CHIP:EM: Handling via exchange: 35983r, Delegate: 0xaaaae659a088
+          [1651229405.704208][2825:2825] CHIP:IM: Received Read request
+          [1651229405.704271][2825:2825] CHIP:DMG: ReadRequestMessage =
+          [1651229405.704303][2825:2825] CHIP:DMG: {
+          [1651229405.704329][2825:2825] CHIP:DMG:        EventPathIBs =
+          [1651229405.704362][2825:2825] CHIP:DMG:        [
+          [1651229405.704392][2825:2825] CHIP:DMG:                EventPath =
+          [1651229405.704428][2825:2825] CHIP:DMG:                {
+          [1651229405.704463][2825:2825] CHIP:DMG:                        Endpoint = 0x0,
+          [1651229405.704501][2825:2825] CHIP:DMG:                        Cluster = 0x28,
+          [1651229405.704539][2825:2825] CHIP:DMG:                        Event = 0x0,
+          [1651229405.704575][2825:2825] CHIP:DMG:                },
+          [1651229405.704613][2825:2825] CHIP:DMG:
+          [1651229405.704641][2825:2825] CHIP:DMG:        ],
+          [1651229405.704676][2825:2825] CHIP:DMG:
+          [1651229405.704707][2825:2825] CHIP:DMG:        isFabricFiltered = true,
+          [1651229405.704737][2825:2825] CHIP:DMG:        InteractionModelRevision = 1
+          [1651229405.704766][2825:2825] CHIP:DMG: },
       disabled: true
 
-    - label: "DUT reads the SupportedFabrics attribute from TH"
+    - label: "Simulate a Factory Reset the TH"
       verification: |
-          ./chip-tool operationalcredentials read supported-fabrics 1 0
+          ./chip-tool basic read-event  leave 1 0
       disabled: true
 
-    - label: "DUT reads the CommissionedFabrics attribute from TH"
+    - label: "Simulate a reboot on the TH"
       verification: |
-          ./chip-tool operationalcredentials read commissioned-fabrics 1 0
+          ./chip-tool basic read-event start-up 1 0
+
+
+          [1651229405.704017][2825:2825] CHIP:EM: Received message of type 0x2 with protocolId (0, 1) and MessageCounter:11744980 on exchange 35983r
+          [1651229405.704064][2825:2825] CHIP:EM: Handling via exchange: 35983r, Delegate: 0xaaaae659a088
+          [1651229405.704208][2825:2825] CHIP:IM: Received Read request
+          [1651229405.704271][2825:2825] CHIP:DMG: ReadRequestMessage =
+          [1651229405.704303][2825:2825] CHIP:DMG: {
+          [1651229405.704329][2825:2825] CHIP:DMG:        EventPathIBs =
+          [1651229405.704362][2825:2825] CHIP:DMG:        [
+          [1651229405.704392][2825:2825] CHIP:DMG:                EventPath =
+          [1651229405.704428][2825:2825] CHIP:DMG:                {
+          [1651229405.704463][2825:2825] CHIP:DMG:                        Endpoint = 0x0,
+          [1651229405.704501][2825:2825] CHIP:DMG:                        Cluster = 0x28,
+          [1651229405.704539][2825:2825] CHIP:DMG:                        Event = 0x0,
+          [1651229405.704575][2825:2825] CHIP:DMG:                },
+          [1651229405.704613][2825:2825] CHIP:DMG:
+          [1651229405.704641][2825:2825] CHIP:DMG:        ],
+          [1651229405.704676][2825:2825] CHIP:DMG:
+          [1651229405.704707][2825:2825] CHIP:DMG:        isFabricFiltered = true,
+          [1651229405.704737][2825:2825] CHIP:DMG:        InteractionModelRevision = 1
+          [1651229405.704766][2825:2825] CHIP:DMG: },
+      disabled: true
+
+    - label: "Simulate a Reachable attribute change on the TH"
+      verification: |
+          ./chip-tool basic read-event reachable-changed 1 0
       disabled: true
