--- a/src/app/tests/suites/certification/Test_TC_DM_4_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_2.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.2. [TC-DM-4.2][Thread] Verification for attributes check [DUT -
+    10.4.2. [TC-DM-4.2] [Thread] Verification for attributes check [DUT -
     Commissionee]
 
 config:
@@ -28,18 +28,18 @@ tests:
 
       disabled: true
 
-    - label: "TH1 is commissioned with DUT"
+    - label: "Commmission TH and DUT on Thread setup"
       verification: |
 
       disabled: true
 
     - label:
-          "TH1 reads Descriptor Cluster from the DUT with EP0 TH1 reads
-          ServerList from the DUT"
+          "TH reads Descriptor Cluster from the DUT with EP0 TH reads ServerList
+          from the DUT"
       verification: |
           buntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool descriptor read server-list 162 0
 
-          [1645772414.100694][3827:3832] CHIP:DMG:         SuppressResponse = true,
+          [1645772414.100694][3827:3832] CHIP:DMG:         SuppressResponse = true, 
           [1645772414.100718][3827:3832] CHIP:DMG:         InteractionModelRevision = 1
           [1645772414.100740][3827:3832] CHIP:DMG: }
           [1645772414.102134][3827:3832] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_001D Attribute 0x0000_0001DataVersion: 3883095917
@@ -68,12 +68,12 @@ tests:
           [1645772414.102925][3827:3832] CHIP:EM: Sending Standalone Ack for MessageCounter:15329672 on exchange 6140i
       disabled: true
 
-    - label: "TH1 reads FeatureMap attribute from the DUT"
+    - label: "TH reads FeatureMap attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read feature-map 162 0
 
 
-          [1645772204.502545][3809:3814] CHIP:DMG:         SuppressResponse = true,
+          [1645772204.502545][3809:3814] CHIP:DMG:         SuppressResponse = true, 
           [1645772204.502608][3809:3814] CHIP:DMG:         InteractionModelRevision = 1
           [1645772204.502683][3809:3814] CHIP:DMG: }
           [1645772204.503195][3809:3814] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_FFFCDataVersion: 92121563
@@ -81,12 +81,12 @@ tests:
           [1645772204.503556][3809:3814] CHIP:EM: Sending Standalone Ack for MessageCounter:5988746 on exchange 46140i
       disabled: true
 
-    - label: "TH1 reads the MaxNetworks attribute from the DUT"
+    - label: "TH reads the MaxNetworks attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read max-networks 162 0
 
 
-          [1645772548.257320][3837:3842] CHIP:DMG:         SuppressResponse = true,
+          [1645772548.257320][3837:3842] CHIP:DMG:         SuppressResponse = true, 
           [1645772548.257381][3837:3842] CHIP:DMG:         InteractionModelRevision = 1
           [1645772548.257437][3837:3842] CHIP:DMG: }
           [1645772548.257735][3837:3842] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0000DataVersion: 92121563
@@ -95,17 +95,17 @@ tests:
       disabled: true
 
     - label:
-          "TH1 saves the MaxNetworks attribute value as 'maxvalue' for furture
-          use"
+          "TH saves the MaxNetworks attribute value as 'MaxNetworksValue' for
+          future use"
       verification: |
-
+          TH1 saves the MaxNetworks attribute value
       disabled: true
 
-    - label: "TH1 reads the Networks attribute list from the DUT"
+    - label: "TH reads the Networks attribute list from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 162 0
 
-          [1645772651.445097][3856:3861] CHIP:DMG:         SuppressResponse = true,
+          [1645772651.445097][3856:3861] CHIP:DMG:         SuppressResponse = true, 
           [1645772651.445149][3856:3861] CHIP:DMG:         InteractionModelRevision = 1
           [1645772651.445209][3856:3861] CHIP:DMG: }
           [1645772651.445754][3856:3861] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0001DataVersion: 92121563
@@ -117,11 +117,11 @@ tests:
           [1645772651.446431][3856:3861] CHIP:EM: Sending Standalone Ack for MessageCounter:12695576 on exchange 11133i
       disabled: true
 
-    - label: "TH1 reads ScanMaxTimeSeconds attribute from the DUT"
+    - label: "TH reads ScanMaxTimeSeconds attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read scan-max-time-seconds 162 0
 
-          [1645772820.740795][3867:3872] CHIP:DMG:         SuppressResponse = true,
+          [1645772820.740795][3867:3872] CHIP:DMG:         SuppressResponse = true, 
           [1645772820.740855][3867:3872] CHIP:DMG:         InteractionModelRevision = 1
           [1645772820.740903][3867:3872] CHIP:DMG: }
           [1645772820.741209][3867:3872] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0002DataVersion: 92121563
@@ -129,11 +129,11 @@ tests:
           [1645772820.741512][3867:3872] CHIP:EM: Sending Standalone Ack for MessageCounter:10309775 on exchange 55305i
       disabled: true
 
-    - label: "TH1 reads ConnectMaxTimeSeconds Attribute from the DUT"
+    - label: "TH reads ConnectMaxTimeSeconds Attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read connect-max-time-seconds 162 0
 
-          [1645772901.118880][3879:3884] CHIP:DMG:         SuppressResponse = true,
+          [1645772901.118880][3879:3884] CHIP:DMG:         SuppressResponse = true, 
           [1645772901.119008][3879:3884] CHIP:DMG:         InteractionModelRevision = 1
           [1645772901.119141][3879:3884] CHIP:DMG: }
           [1645772901.119684][3879:3884] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0003DataVersion: 92121563
@@ -141,11 +141,11 @@ tests:
           [1645772901.120100][3879:3884] CHIP:EM: Sending Standalone Ack for MessageCounter:11917538 on exchange 4188
       disabled: true
 
-    - label: "TH1 reads InterfaceEnabled attribute from the DUT"
+    - label: "TH reads InterfaceEnabled attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read interface-enabled 162 0
 
-          [1645772984.653996][3895:3900] CHIP:DMG:         SuppressResponse = true,
+          [1645772984.653996][3895:3900] CHIP:DMG:         SuppressResponse = true, 
           [1645772984.654043][3895:3900] CHIP:DMG:         InteractionModelRevision = 1
           [1645772984.654084][3895:3900] CHIP:DMG: }
           [1645772984.654310][3895:3900] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0004DataVersion: 92121563
@@ -153,11 +153,11 @@ tests:
           [1645772984.654530][3895:3900] CHIP:EM: Sending Standalone Ack for MessageCounter:14026610 on exchange 33717i
       disabled: true
 
-    - label: "TH1 reads LastNetworkingStatus attribute from the DUT"
+    - label: "TH reads LastNetworkingStatus attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-networking-status 162 0
 
-          [1645773078.930516][3905:3910] CHIP:DMG:         SuppressResponse = true,
+          [1645773078.930516][3905:3910] CHIP:DMG:         SuppressResponse = true, 
           [1645773078.930579][3905:3910] CHIP:DMG:         InteractionModelRevision = 1
           [1645773078.930635][3905:3910] CHIP:DMG: }
           [1645773078.930943][3905:3910] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0005DataVersion: 92121563
@@ -166,12 +166,12 @@ tests:
       disabled: true
 
     - label:
-          "TH1 reads the LastNetworkID attribute from the DUT TH1 reads the
+          "TH reads the LastNetworkID attribute from the DUT TH reads the
           Networks attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-network-id 162 0
 
-          [1645773167.178501][3913:3918] CHIP:DMG:         SuppressResponse = true,
+          [1645773167.178501][3913:3918] CHIP:DMG:         SuppressResponse = true, 
           [1645773167.178561][3913:3918] CHIP:DMG:         InteractionModelRevision = 1
           [1645773167.178618][3913:3918] CHIP:DMG: }
           [1645773167.178919][3913:3918] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0006DataVersion: 92121563
@@ -179,11 +179,11 @@ tests:
           [1645773167.182422][3913:3918] CHIP:EM: Sending Standalone Ack for MessageCounter:2029571 on exchange 18566i
       disabled: true
 
-    - label: "TH1 reads the LastConnectErrorValue attribute from the DUT"
+    - label: "TH reads the LastConnectErrorValue attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-connect-error-value 162 0
 
-          [1645773318.752774][3938:3943] CHIP:DMG:         SuppressResponse = true,
+          [1645773318.752774][3938:3943] CHIP:DMG:         SuppressResponse = true, 
           [1645773318.752861][3938:3943] CHIP:DMG:         InteractionModelRevision = 1
           [1645773318.753043][3938:3943] CHIP:DMG: }
           [1645773318.753543][3938:3943] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0031 Attribute 0x0000_0007DataVersion: 92121563
