--- a/src/app/tests/suites/certification/Test_TC_DM_4_5.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_5.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.5. [TC-DM-4.5][WiFi] UNSUPPORTED_ACCESS message Validation
+    10.4.5. [TC-DM-4.5] [WiFi] UNSUPPORTED_ACCESS message Validation
     [DUT-Commissionee]
 
 config:
@@ -24,9 +24,10 @@ config:
 
 tests:
     - label:
-          "TH1 sends the AddOrUpdateWiFiNetwork command to the DUT with the
+          "TH sends the AddOrUpdateWiFiNetwork command to the DUT with the
           following argument: SSID argument value as 'Userwifi_ssid' Credentials
-          argument value as 'xxxxx' Breadcrumb argument value as 0"
+          argument value as 'Userwifi_Credentials' Breadcrumb argument value as
+          1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning add-or-update-wi-fi-network hex:47524C50726976617465 grlprivatewifi092010 1 0
 
@@ -37,8 +38,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends RemoveNetwork command to the DUT with NetworkID argument
-          value as 'Userwifi_ssid' and Breadcrumb argument value as 0"
+          "TH sends RemoveNetwork command to the DUT with NetworkID argument
+          value as 'Userwifi_ssid' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning remove-network hex:47524C50726976617465 1 0
 
@@ -49,8 +50,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends ConnectNetwork command to the DUT with NetworkID argument
-          value as 'Userwifi_ssid' and Breadcrumb argument value as 0"
+          "TH sends ConnectNetwork command to the DUT with NetworkID argument
+          value as 'Userwifi_ssid' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning connect-network hex:47524C50726976617465 1 0
 
