--- a/src/app/tests/suites/certification/Test_TC_DM_4_6.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_6.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.6. [TC-DM-4.6][Thread] UNSUPPORTED_ACCESS message Validation
+    10.4.6. [TC-DM-4.6] [Thread] UNSUPPORTED_ACCESS message Validation
     [DUT-Commissionee]
 
 config:
@@ -24,9 +24,9 @@ config:
 
 tests:
     - label:
-          "TH1 sends the AddOrUpdateThreadNetwork command to the DUT with the
+          "TH sends the AddOrUpdateThreadNetwork command to the DUT with the
           following argument: OperationalDataset argument value as 'Userth_op'
-          Breadcrumb argument value as 0"
+          Breadcrumb argument value as 1"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning add-or-update-thread-network 1232034768527434274  51 0
 
@@ -37,8 +37,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends RemoveNetwork command to the DUT with NetworkID argument
-          value as 'Userth_op' and Breadcrumb argument value as 0"
+          "TH sends RemoveNetwork command to the DUT with NetworkID argument
+          value as 'Userth_op' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning remove-network 1232034768527434274 51 0
 
@@ -49,8 +49,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends ConnectNetwork command to the DUT with NetworkID argument
-          value as 'Userth_op' and Breadcrumb argument value as 0"
+          "TH sends ConnectNetwork command to the DUT with NetworkID argument
+          value as 'Userth_op' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning connect-network 1232034768527434274 51 0
 
