--- a/src/app/tests/suites/certification/Test_TC_DM_4_7.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_7.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.7. [TC-DM-4.7][WiFi] Verification for AddOrUpdateWiFiNetwork command
+    10.4.7. [TC-DM-4.7] [WiFi] Verification for AddOrUpdateWiFiNetwork command
     [DUT-Commissionee]
 
 config:
@@ -23,7 +23,7 @@ config:
     endpoint: 0
 
 tests:
-    - label: "TH1 sends ArmFailSafe command to the DUT"
+    - label: "Verify that DUT sends ArmFailSafeResponse command to the TH"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool generalcommissioning arm-fail-safe 60 0 1 0
 
@@ -38,9 +38,9 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends AddOrUpdateWiFiNetwork command to the DUT with SSID
-          argument value as 'Userwifi_ssid', Credentials argument value as
-          'xxxxx' and Breadcrumb argument value as 0"
+          "TH sends AddOrUpdateWiFiNetwork command to the DUT with SSID argument
+          value as 'Userwifi_ssid', Credentials argument value as
+          'Userwifi_Credentials' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning add-or-update-wi-fi-network hex:47524C50726976617465 grlprivatewifi092010 1 0
 
@@ -54,7 +54,7 @@ tests:
           [1650371276.622728][42488:42493] CHIP:EM: Sending Standalone Ack for MessageCounter:9593846 on exchange 33754i
       disabled: true
 
-    - label: "TH1 reads MaxNetworks attribute from the DUT"
+    - label: "TH reads MaxNetworks attribute from the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read max-networks 1 0
 
@@ -63,7 +63,7 @@ tests:
           [1650371283.620939][42495:42500] CHIP:EM: Sending Standalone Ack for MessageCounter:8017442 on exchange 15049i
       disabled: true
 
-    - label: "TH1 reads LastNetworkingStatus attribute from the DUT"
+    - label: "TH reads LastNetworkingStatus attribute from the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-networking-status 1 0
 
@@ -72,7 +72,7 @@ tests:
           [1650371290.738335][42502:42507] CHIP:EM: Sending Standalone Ack for MessageCounter:4381870 on exchange 56044i
       disabled: true
 
-    - label: "TH1 reads Networks attribute from the DUT"
+    - label: "TH reads Networks attribute from the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 1 0
 
