--- a/src/app/tests/suites/certification/Test_TC_DM_4_9.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_9.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.9. [TC-DM-4.9][WiFi] Verification for RemoveNetwork Command
+    10.4.9. [TC-DM-4.9] [WiFi] Verification for RemoveNetwork Command
     [DUT-Commissionee]
 
 config:
@@ -23,7 +23,7 @@ config:
     endpoint: 0
 
 tests:
-    - label: "TH1 sends ArmFailSafe command to the DUT"
+    - label: "TH sends ArmFailSafe command to the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool generalcommissioning arm-fail-safe 60 0 1 0
 
@@ -39,7 +39,7 @@ tests:
     - label:
           "TH1 sends AddOrUpdateWiFiNetwork command to the DUT with SSID
           argument value as 'Userwifi_ssid', Credentials argument value as
-          'xxxxx' and Breadcrumb argument value as 0"
+          'Userwifi_Credentials' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning add-or-update-wi-fi-network hex:47524C50726976617465 grlprivatewifi092010 1 0
 
@@ -67,8 +67,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends RemoveNetwork Command to the DUT with NetworkID argument
-          value as 'Userwifi_ssid' and Breadcrumb argument value as 0"
+          "TH sends RemoveNetwork Command to the DUT with NetworkID argument
+          value as 'Userwifi_ssid' and Breadcrumb argument value as 1"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning remove-network hex:47524C50726976617465 1 0
 
@@ -91,7 +91,7 @@ tests:
           [1650373307.420120][42703:42708] CHIP:EM: Sending Standalone Ack for MessageCounter:11050013 on exchange 13049i
       disabled: true
 
-    - label: "TH1 reads LastNetworkingStatus attribute from the DUT"
+    - label: "TH reads LastNetworkingStatus attribute from the DUT"
       verification: |
           ubuntu@TE-8:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-networking-status 1 0
 
