--- a/src/app/tests/suites/TestGroupsCluster.yaml
+++ b/src/app/tests/suites/TestGroupsCluster.yaml
@@ -28,7 +28,7 @@ tests:
               - name: "nodeId"
                 value: nodeId
 
-    - label: "View Group 0 (invalid)"
+    - label: "View Non-existing Group"
       command: "ViewGroup"
       arguments:
           values:
@@ -41,7 +41,7 @@ tests:
               - name: "groupId"
                 value: 0
 
-    - label: "View Group 1 (not found)"
+    - label: "View First Group (not found)"
       command: "ViewGroup"
       arguments:
           values:
@@ -54,7 +54,7 @@ tests:
               - name: "groupId"
                 value: 0x0001
 
-    - label: "Add Group 1 (invalid)"
+    - label: "Add First Group (invalid)"
       command: "AddGroup"
       arguments:
           values:
@@ -65,11 +65,11 @@ tests:
       response:
           values:
               - name: "status"
-                value: 135
+                value: 133
               - name: "groupId"
                 value: 0x0000
 
-    - label: "Add Group 1 (new)"
+    - label: "Add First Group (new)"
       command: "AddGroup"
       arguments:
           values:
@@ -84,7 +84,7 @@ tests:
               - name: "groupId"
                 value: 0x0001
 
-    - label: "View Group 1 (new)"
+    - label: "View First Group (new)"
       command: "ViewGroup"
       arguments:
           values:
@@ -99,7 +99,7 @@ tests:
               - name: "groupName"
                 value: "Group #1"
 
-    - label: "View Group 2 (not found)"
+    - label: "View Second Group (not found)"
       command: "ViewGroup"
       arguments:
           values:
@@ -125,7 +125,7 @@ tests:
               - name: "groupList"
                 value: [0x01]
 
-    - label: "Add Group 2 (new)"
+    - label: "Add Second Group (new)"
       # https://github.com/project-chip/connectedhomeip/issues/11312
       disabled: true
       command: "AddGroup"
@@ -142,7 +142,7 @@ tests:
               - name: "groupId"
                 value: 0x1111
 
-    - label: "View Group 2 (new)"
+    - label: "View Second Group (new)"
       # https://github.com/project-chip/connectedhomeip/issues/11312
       disabled: true
       command: "ViewGroup"
@@ -189,7 +189,7 @@ tests:
               - name: "groupId"
                 value: 0x7fff
 
-    - label: "View Group 1 (existing)"
+    - label: "View First Group (existing)"
       command: "ViewGroup"
       arguments:
           values:
@@ -204,7 +204,7 @@ tests:
               - name: "groupName"
                 value: "Group #1"
 
-    - label: "View Group 2 (existing)"
+    - label: "View Second Group (existing)"
       # https://github.com/project-chip/connectedhomeip/issues/11312
       disabled: true
       command: "ViewGroup"
@@ -279,7 +279,7 @@ tests:
               - name: "groupId"
                 value: 0x04
 
-    - label: "Remove Group 2 (existing)"
+    - label: "Remove Second Group (existing)"
       # https://github.com/project-chip/connectedhomeip/issues/11312
       disabled: true
       command: "RemoveGroup"
@@ -294,7 +294,7 @@ tests:
               - name: "groupId"
                 value: 0x1111
 
-    - label: "View Group 1 (not removed)"
+    - label: "View First Group (not removed)"
       command: "ViewGroup"
       arguments:
           values:
@@ -309,7 +309,7 @@ tests:
               - name: "groupName"
                 value: "Group #1"
 
-    - label: "View Group 2 (removed)"
+    - label: "View Second Group (removed)"
       command: "ViewGroup"
       arguments:
           values:
@@ -355,7 +355,7 @@ tests:
     - label: "Remove All"
       command: "RemoveAllGroups"
 
-    - label: "View Group 1 (removed)"
+    - label: "View First Group (removed)"
       command: "ViewGroup"
       arguments:
           values:
@@ -368,7 +368,7 @@ tests:
               - name: "groupId"
                 value: 0x0001
 
-    - label: "View Group 2 (still removed)"
+    - label: "View Second Group (still removed)"
       command: "ViewGroup"
       arguments:
           values:
